@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 6805cc72c4e2e3176ab6c25635f8eb0104a76285 ChangeLog
+SHA1 cdc3e63e78d1fa29bc289bd525e0087dd0cb371b ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 2405b691fcb18b468ccb31cab97babb75e4d1f30 MANIFEST
-SHA1 b8c8bddb1b7dea324b993ea2e48fd46b6022e89c META.yml
-SHA1 f18e5a652d2db15075ffcfbd17367682e772e115 Makefile.PL
+SHA1 6135a0558fad48facd31f0c20d2fde4fc3c07647 META.yml
+SHA1 0da286fa9a801c3035e44577e39d32fe5e75ce8e Makefile.PL
 SHA1 7250b2f536fe8a96fb25fc7435146bc006aaefe1 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 b49ee0f29a9e578dfc05ac8a69ceee952810622d bin/fullauto.pl
@@ -47,7 +47,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 fb2c2f6e2ade19cd024dad15dd25bebf85023a4b install_mozrepl_plugin.ahk
-SHA1 f1bdd3baadc027db41513401c40e87677672c643 lib/Net/FullAuto.pm
+SHA1 5e6383b6877fe6d8ace66d15f96ec8915d82f6f7 lib/Net/FullAuto.pm
 SHA1 dabbf5e523732ed0d3084fb91dcccb4f1c330ceb lib/Net/FullAuto/Custom/BackUp/README
 SHA1 c2219c6cd1af2a775ebd3b90e0d4731ef0aededc lib/Net/FullAuto/Custom/README
 SHA1 32064cac342c1fab8377c4b9fe5c41be23a92e78 lib/Net/FullAuto/Distro/fa_code.pm
@@ -64,11 +64,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJTpaY/AAoJEBa/9Pad787EP/gIALXnwKjC4SJExzgshWGwrmlN
-Uww8WdPbw2tJgvEi5QlFjnRymm1llGs9vOmnbXrK6nY0WTdrtkoPlQN9zdOn1kja
-tCjHEM+pX/UpCTMMdTb3olmYBeveWUoWJSjT7CJiNqsUo0Q8xlg3kRaOsO1CmA+u
-OE8fWNVrS9Uky4eO9wqgUpKMOtA9ss62m3vM5Nzlrz//1tjERIodK3HtAxUlhITR
-doc3QamS1yNCuRdhToz9i2UHlBLtyCD09MA/nsx/qa59fE6bjj+wbJwyR3f+5zWl
-OJpaW626TG5HdN2Cqn456E1qRKIuH4vprkcLz3iBZ/JHDzwTu5Czk29siyPFclU=
-=mdTi
+iQEcBAEBAgAGBQJTpavWAAoJEBa/9Pad787ESr0H/2kx4iKMwp2HcO0TDD39vs74
+iw3Ov9UD3YHKRRtjiCRzbI2opoMuKMQSxWo0gJCwT1bWFgnYLmStH7lW5ui/LWWy
+8CdN9NZK/g/G95VpF1uuSPCugBfRIIpaS1vJTz2U6G0IDIoVSKXxOZff9bMivFf3
+OnQfyIwomRbbuLNPKp3TFSf2XEFjio9mz0eCYDyVAfWr5YHhdlT3O7lZSl6urOGz
+rrhW8CH6vQbrGPJm39eLjutonVrEIQRYnh3sd1lsVy9fCeFVGRoyZccnUZY1pVqb
+0flF2bwt35oMwV3UdLSL60A9rdsmt6P5iT+9C1eHPYZCBC+g75Kxq5BFSvXDvbU=
+=p8HD
 -----END PGP SIGNATURE-----
