@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.99999998';
+our $VERSION='0.99999999';
 
 
 use 5.005;
